change: Refactor